[package]
name = "argus"
version = "0.1.0"
edition = "2024"
description = "Argus - File watcher"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
humantime = "2.1.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
