[package]
name = "argus"
version = "0.1.0"
edition = "2024"
description = "Argus - File watcher"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.6.1", features = ["derive", "env"] }
fast-glob = "1.0.1"
futures = "0.3.32"
humantime = "2.1.0"
liquid-json = "0.6.1"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.13.4", features = ["json"] }
reqwest-middleware = { version = "0.5.2", features = ["json"] }
reqwest-retry = "0.9.1"
reqwest-tracing = "0.7.1"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.5.0"
