[package]
name = "lynceus"
version = "0.5.2"
edition = "2024"
description = "lynceus is a file watcher that reports file changes using a webhook."
repository = "https://github.com/kevinastone/lynceus"
license = "MIT"
exclude = [".envrc", "/.github/", "/flake.*", "AGENTS.md"]

[[bin]]
name = "lynceus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
fast-glob = "1.0.1"
futures = "0.3.32"
humantime = "2.3.0"
liquid-json = "0.6.1"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.13.4", features = ["json"] }
reqwest-middleware = { version = "0.5.2", features = ["json"] }
reqwest-retry = "0.9.1"
reqwest-tracing = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
camino-tempfile = "1.4.1"
mockito = "1.7.2"
